fixed bug that only upper half is visible in safari. (#28)

--- a/klimaland-app/src/styles/_charts.scss
+++ b/klimaland-app/src/styles/_charts.scss
@@ -86,6 +86,7 @@
                         cursor: pointer;
                         transform: translate(-20px, -10px) skew(-17deg, 0deg);
                         -webkit-transform:translate(-20px, -10px) skew(-17deg, 0deg);
+                        overflow: visible;
                     }
 
                     &.thumbnail-chart {
@@ -558,6 +559,8 @@
                 }
 
                 .chart {
+
+                    overflow: visible;
                     
                     text {
                         font-size: 12px;  
@@ -1061,6 +1064,7 @@
                 @include responsive-layout;
 
                 .chart{
+                    overflow: visible;
                     .bars {
                         .labelText {
                             font-size: 12px;
